Refactor code and fix failing test